test/corpus/comments.txt
================================================================================
Line comment
================================================================================

// this is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Doc comment
================================================================================

/// This is a doc comment

--------------------------------------------------------------------------------

(source_file
  (doc_comment))

================================================================================
Multiple comments
================================================================================

// first comment
/// doc comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (doc_comment))
