test/corpus/literals.txt
================================================================================
Integer literal
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (integer_literal))

================================================================================
Float literal
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (float_literal))

================================================================================
Boolean true
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (boolean_literal))

================================================================================
Boolean false
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (boolean_literal))

================================================================================
Basic string
================================================================================

"hello"

--------------------------------------------------------------------------------

(source_file
  (string_literal))

================================================================================
String with escape sequence
================================================================================

"hello\nworld"

--------------------------------------------------------------------------------

(source_file
  (string_literal
    (escape_sequence)))

================================================================================
Multiple literals
================================================================================

42
3.14
true
"hello"

--------------------------------------------------------------------------------

(source_file
  (integer_literal)
  (float_literal)
  (boolean_literal)
  (string_literal))
